--- a/src/main/webapp/static/themes/light/modules/_toolbar.scss
+++ b/src/main/webapp/static/themes/light/modules/_toolbar.scss
@@ -121,7 +121,6 @@
 	.o_tool, .o_text {
 		position: relative;
 		margin: 0 10px;	
-		vertical-align: top;
 		&:first-child {
 			margin-left: 0;	
 		}
